<resources>
    <string name="app_name">Consumer App</string>
    <string name="todo">TODO</string>
    <string name="title_activity_settings">Settings</string>

    <string name="tv_followers">Followers</string>
    <string name="tv_repository">Repository</string>
    <string name="tv_following">Following</string>
    <string name="tv_company">Company</string>

    <string name="favorite_user">Favorite User</string>
    <string name="remove_favorite">Has been removed from the favorites list</string>
    <string name="added_favorite">Added to favorite list</string>
    <string name="empty_list">You don\'t have a favorite list yet</string>
</resources>